syntax = "proto3";

package dg.model;

import "matrix.proto";
import "witness.proto";

enum ImportDSType {
    IDSTYPE_UNKNOWN = 0;
    IDSTYPE_HTTP = 1;
    IDSTYPE_HTTPS = 2;
    IDSTYPE_FTP = 3;
    IDSTYPE_SAMBA = 4;
    IDSTYPE_DATABASE = 5;
    IDSTYPE_KAFKA = 6;
    IDSTYPE_NSQ = 7;
    IDSTYPE_HTTPSERVER = 8;

    IDSTYPE_CUSTOM = 255;
}

enum OutputDSType {
    ODSTYPE_UNKNOWN = 0;
    ODSTYPE_HTTP = 1;
    ODSTYPE_HTTPS = 2;
    ODSTYPE_KAFKA = 3;
    ODSTYPE_NSQ = 4;
    ODSTYPE_GRPC = 5;
    ODSTYPE_TCP = 6;

    ODSTYPE_CUSTOM = 255;
}

message DataSourceAttr {
    string Key = 1;
    string Value = 2;
}

message ImportDataSource {
    ImportDSType Type = 1;
    repeated DataSourceAttr Attributes = 2; //for different type specific configuration
    int32 DefaultRepoId = 3;
    int32 DefaultSensorId = 4;
    string DefaultRepoName = 5;
    string DefaultSensorName = 6;
}

message InputObj {
	int64 Id = 1; // deprecated
	string SessionId = 2;
	int64 Timestamp = 4;
	int32 RepoId = 5; // deprecated
	string RepoName = 6; // deprecated
	int32 SensorId = 7; // deprecated
	string SensorName = 8; // deprecated
	string UniqueSensorId = 9;
	string Url = 10;
	bytes BinData = 11;

	bool Resp = 16;
	bool Sync = 17;
	OutputEndpoint Output = 18;
}

message OutputEndpoint {
    OutputDSType Type = 1; // deprecated
    repeated DataSourceAttr Attributes = 2; // deprecated
    int32 SpeedLimit = 3; //images passed to backend each second, 0: no limit; deprecated
    repeated RecognizeType RecTypes = 4;
    repeated RecognizeFunctions RecFuncs = 5;
    repeated WitnessRelativeROI RelativeROI = 6;
}

message OutputObj {
	int64 Id = 1; // deprecated
	string SessionId = 2;
	int64 Timestamp = 4;
	int32 RepoId = 5; // deprecated
	int32 SensorId = 6; // deprecated
	string UniqueSensorId = 7;
	string PlateText = 8;
	string VehicleImage = 9;

	int32 PlateTypeId = 16;
	int32 PlateColorId = 17;
	int32 VehicleTypeId = 18;
	int32 VehicleColorId = 19;
	int32 BrandId = 20;
	int32 SubBrandId = 21;
	int32 ModelYearId = 22;

	string PlateType = 32;
	string PlateColor = 33;
	string VehicleType = 34;
	string VehicleColor = 35;
	string Brand = 36;
	string SubBrand = 37;
	string ModelYear = 38;
}